# tumpa-cli

./: Cargo.toml  README.md  justfile
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  security.yml
completions/: tpass.bash  tpass.fish  tpass.zsh
contrib/homebrew/: tumpa-cli.rb
contrib/systemd/: README.md  tumpa-agent.service  tumpa-gpg-agent.service  tumpa-ssh-agent.service
docker/: Dockerfile
docs/: usage.md
docs/adr/: 0001-ssh-agent-support.md  0002-merge-on-reimport.md  0003-on-demand-card-cache.md  0004-systemd-user-service.md  0005-pinentry-resolution.md  0005-split-gpg-compat-binary.md  0006-import-from-gpg-and-stdin.md  0007-primary-uid-for-summary-display.md  0008-experimental-cargo-feature.md  0009-tcli-subcommand-redesign.md  0010-tcli-encrypt-decrypt-subcommands.md  0011-serve-openssh-disk-keys.md
src/: cache.rs  cache_cmd.rs  card_link.rs  card_touch.rs  cli.rs  decrypt_cmd.rs  encrypt_cmd.rs  keystore.rs  lib.rs  list_cards.rs  main.rs  notify.rs  pinentry.rs  sign_cmd.rs  store.rs  upload_card.rs  verify_cmd.rs
src/agent/: mod.rs  pinentry.rs  protocol.rs
src/gpg/: decrypt.rs  encrypt.rs  keys.rs  mod.rs  sign.rs  verify.rs
src/pinentry/: assuan.rs  mod.rs
src/ssh/: agent.rs  disk_keys.rs  mod.rs
src/tclig/: cli.rs  main.rs
src/tpass/: cli.rs  main.rs
src/tpass/commands/: cp.rs  edit.rs  find.rs  generate.rs  git.rs  grep.rs  init.rs  insert.rs  mod.rs  mv.rs  rm.rs  show.rs
src/tpass/util/: clip.rs  config.rs  crypto.rs  git.rs  mod.rs  tree.rs
tests/: provision_test_key.sh  test_agent_no_bad_cache.sh  test_git_sign.sh  test_keystore.sh  test_pass.sh  test_sign_verify.sh  test_tpass.sh  test_tpass_compat.sh  test_upload_card.sh
tests/keys/: multiuid.asc  v4_x25519_cs_primary.asc
