[package]
name = "tumpa-cli"
version = "0.5.1"
edition = "2021"
description = "OpenPGP operations and SSH agent backed by tumpa keystore."
license = "GPL-3.0-or-later"
repository = "https://github.com/tumpaproject/tumpa-cli"
readme = "README.md"
keywords = ["openpgp", "gpg", "encryption", "ssh", "pass"]
categories = ["cryptography", "authentication"]
include = [
    "src/**/*.rs",
    "completions/*",
    "contrib/**",
    "tests/**/*.sh",
    "tests/keys/*.asc",
    "tests/keys/*.pub",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "docs/**/*.md",
    "justfile",
]

[[bin]]
name = "tcli"
path = "src/main.rs"

[[bin]]
name = "tclig"
path = "src/tclig/main.rs"

[[bin]]
name = "tpass"
path = "src/tpass/main.rs"

[features]
default = []
# Opt-in, build-time gate for unfinished card surfaces: --upload-to-card,
# --reset-card, and anything else tagged "experimental". Enabling this
# feature compiles the flags into `tcli`; without it, the flags do not
# exist on the binary at all. Release builds intended for end users
# must NOT enable this feature.
experimental = []

[dependencies]
# Keep this on a wecanencrypt release that ships the Curve25519 `0x40`
# prefix + (X25519, X25519) match arm needed by Nitrokey 3
# (opcard-rs >= 1.5) ECC card uploads.
wecanencrypt = { version = "0.14.2", features = ["keystore", "card-pcsc", "network"] }
libtumpa = { version = "0.3.1", path = "../libtumpa", features = ["card", "network"] }
# Must match wecanencrypt's pgp dependency exactly -- both crates parse
# detached signatures using pgp::composed::DetachedSignature, and a version
# mismatch could cause parser disagreement (see verify.rs dual-parse note).
pgp = "0.19"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
base64 = "0.22"
hex = "0.4"
anyhow = "1"
env_logger = "0.11"
log = "0.4"
dirs = "6"
zeroize = { version = "1", features = ["derive"] }
rpassword = "7"
libc = "0.2"
# Direct PCSC APDU sender for the touch-notification path's UIF
# fallback. Some YubiKey firmware (4.3.x and earlier) supports per-slot
# UIF but does NOT embed the UIF tags in the Application Related Data
# DO; openpgp-card-rs only walks ARD, so its `user_interaction_flag`
# returns `None` for every slot on those cards. talktosc lets us send
# `GET DATA 0xD6/0xD7/0xD8` directly and read the policy bytes the
# card actually has.
talktosc = "0.3.0"

# SSH agent
ssh-agent-lib = "0.5"
ssh-key = { version = "0.6", features = ["p256", "p384", "p521"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
p256 = "0.13"
p384 = "0.13"
p521 = "0.13"
# `KeyInfo::expiration_time` is `Option<chrono::DateTime<chrono::Utc>>`,
# and the `--list-keys --with-colons` validity computation needs to
# compare it against `Utc::now()`. Promoted from dev-deps so production
# code can call `Utc::now()`.
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
