[package]
name = "tumpa-cli"
version = "0.6.1"
edition = "2021"
description = "OpenPGP operations and SSH agent backed by tumpa keystore."
license = "GPL-3.0-or-later"
repository = "https://github.com/tumpaproject/tumpa-cli"
readme = "README.md"
keywords = ["openpgp", "gpg", "encryption", "ssh", "pass"]
categories = ["cryptography", "authentication"]
include = [
    "src/**/*.rs",
    "completions/*",
    "contrib/**",
    "tests/**/*.sh",
    "tests/keys/*.asc",
    "tests/keys/*.pub",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "docs/**/*.md",
    "justfile",
]

[[bin]]
name = "tcli"
path = "src/main.rs"

[[bin]]
name = "tclig"
path = "src/tclig/main.rs"

[[bin]]
name = "tpass"
path = "src/tpass/main.rs"

[features]
default = []
# Opt-in, build-time gate for unfinished card surfaces: --upload-to-card,
# --reset-card, and anything else tagged "experimental". Enabling this
# feature compiles the flags into `tcli`; without it, the flags do not
# exist on the binary at all. Release builds intended for end users
# must NOT enable this feature.
experimental = []

[dependencies]
# Keep this on a wecanencrypt release that ships the Curve25519 `0x40`
# prefix + (X25519, X25519) match arm needed by Nitrokey 3
# (opcard-rs >= 1.5) ECC card uploads.
wecanencrypt = { version = "0.15.0", features = ["keystore", "card-pcsc", "network"] }
libtumpa = { version = "0.3.2", features = ["card", "network"] }
# Must match wecanencrypt's pgp dependency exactly -- both crates parse
# detached signatures using pgp::composed::DetachedSignature, and a version
# mismatch could cause parser disagreement (see verify.rs dual-parse note).
pgp = "0.19"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
base64 = "0.22"
hex = "0.4"
anyhow = "1"
env_logger = "0.11"
log = "0.4"
dirs = "6"
zeroize = { version = "1", features = ["derive"] }
rpassword = "7"
libc = "0.2"

# SSH agent
ssh-agent-lib = "0.5"
ssh-key = { version = "0.6", features = ["p256", "p384", "p521"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
p256 = "0.13"
p384 = "0.13"
p521 = "0.13"
# `KeyInfo::expiration_time` is `Option<chrono::DateTime<chrono::Utc>>`,
# and the `--list-keys --with-colons` validity computation needs to
# compare it against `Utc::now()`. Promoted from dev-deps so production
# code can call `Utc::now()`.
chrono = "0.4"

# Direct PCSC APDU sender used by `card_touch::read_uif_via_talktosc`,
# the fallback that catches per-slot UIF on YubiKey firmware 4.3.x and
# earlier (those cards support UIF DOs but don't embed the tags in
# Application Related Data, so openpgp-card-rs's ARD-only path returns
# `None` for every slot). talktosc lets us send `GET DATA 0xD6/0xD7/0xD8`
# directly and read the policy bytes the card actually has.
#
# Unconditional dep: the touch-banner path now runs on macOS and Linux
# (Linux added in 0.7), and wecanencrypt's `card-pcsc` feature already
# pulls the PCSC stack on Linux — so the only added cost on Linux is
# `talktosc` itself + `thiserror`.
talktosc = "0.3.0"

# Linux-only: notify-rust posts the touch banner via D-Bus
# `org.freedesktop.Notifications`. macOS uses terminal-notifier (see
# `notify::post_macos`) because notify-rust's macOS backend posts via
# NSUserNotification, which routes under the calling Terminal's bundle
# identity (the exact problem the macOS comment in notify.rs documents).
# Other Unixes / Windows: `notify::touch_prompt` is a compile-time no-op,
# so no dep is needed.
[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4"

[dev-dependencies]
tempfile = "3"
